CMP0082: Check EXCLUDE_FROM_ALL property at generate time

Fixes: #22234